# rgba-osd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  rgba-osd.c  rgba-osd.h
test/: CMakeLists.txt  main.c
test/assets/: rectangle_64x32.c
test/cases/: compositing_over_premultiplied.c
test/tools/: rgba2png.c  rgba2png.h  str.c  str.h
